--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Code to reproduce running example of [LPJ19].\n",
+    "YOYOYOYOYOYOY of [LPJ19].\n",
     "\n",
     "[LPJ19] B. Legat, P. A. Parrilo and R. M. Jungers  **An entropy-based bound for the computational complexity of a switched system**. IEEE Transactions on Automatic Control, https://doi.org/10.1109/TAC.2019.2902625\n",
     "\n",
